[UPDATE] Environnement et ConfigMap

--- a/busy-deploy.yml
+++ b/busy-deploy.yml
@@ -32,3 +32,11 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: status.hostIP
+          - name: TEACHER
+            valueFrom:
+              configMapKeyRef:
+                name: busy
+                key: Formateur
+        envFrom:
+          - configMapRef:
+              name: busy
