[UPDATE] Environnement et Secret

--- a/busy-deploy.yml
+++ b/busy-deploy.yml
@@ -37,6 +37,11 @@ spec:
               configMapKeyRef:
                 name: busy
                 key: Formateur
+          - name: PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: busy
+                key: Password
         envFrom:
           - configMapRef:
               name: busy
