--- a/hello-deploy-tp2.yml
+++ b/hello-deploy-tp2.yml
@@ -7,7 +7,7 @@ metadata:
     app: hello
   name: hello
 spec:
-  replicas: 10
+  replicas: 3
   selector:
     matchLabels:
       app: hello
@@ -42,3 +42,13 @@ spec:
             port: 80
           periodSeconds: 15
           failureThreshold: 2
+        volumeMounts:
+          - name: data
+            mountPath: /var/lib/hello-http
+            subPath: hello
+
+      volumes:
+        - name: data
+          nfs:
+            server: 192.168.56.250
+            path: /
