[NEW] Autoscaling avec HPA

--- a/hello-deploy-tp2.yml
+++ b/hello-deploy-tp2.yml
@@ -41,6 +41,9 @@ spec:
           - name: data
             mountPath: /var/lib/hello-http
             subPath: hello
+        resources:
+          limits:
+            cpu: 10m
 
       volumes:
         - name: data
